# Agentic-Tool-Optimization

./: .env.example  .gitattributes  .gitignore  AGENTS.md  BLUE-SKY.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  NEXT-SESSIONS-2026-05-21.html  PHASE-7-PLAN.md  PRD.md  PRODUCTION_SETUP.md  QA.md  README.md  ROADMAP.md  SECURITY.md  SETUP_REQUIREMENTS.md  STRATEGY-PRO-DRAFT-2026-05-21.md  codeelegancesession.txt  node_modules  package-lock.json  package.json  vercel.json  yc-session.md
.claude/: settings.local.json
.claude/skills/ato-make-agent/: SKILL.md
.claude/skills/ato-mission/: SKILL.md
.claude/skills/ato-review/: SKILL.md
.claude/skills/ato-warroom/: SKILL.md  gstack-agents.sql
.githooks/: pre-commit  pre-push
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/workflows/: ci.yml  release.yml  security-audit.yml
RELEASES/: announcement-phase-6.md  demo-bridge-seed.sh  demo-bridge.tape  demo.tape  fedora-dmabuf-fix.patch  v2.3.x-phase-6.md
RELEASES/v2.4.6/: producthunt-launch.md  twitter-thread.md
apps/cli/: Cargo.toml  README.md
apps/cli/src/: agent_errors.rs  api_dispatch.rs  api_dispatch_tools.rs  attribution.rs  byok.rs  cli_path.rs  db.rs  encryption.rs  events_publisher.rs  live_runs.rs  main.rs  output.rs  paused_dispatches.rs  pro_client.rs  quota.rs  remote_runtime.rs  review_tools.rs  runtime.rs  runtime_quota.rs  tier.rs
apps/cli/src/commands/: agents.rs  auth.rs  bench.rs  bridge.rs  bundles.rs  chats.rs  compare.rs  config_changes.rs  conversation_close.rs  cost.rs  cost_recommend.rs  demo_compare.rs  dispatch.rs  dispatches.rs  evaluators.rs  events.rs  files_touched.rs  inputs.rs  kill.rs  loops.rs  master_key.rs  mesh.rs  methodology.rs  missions.rs  mod.rs  observe.rs  posts.rs  pro.rs  production_signals.rs  providers.rs  ratchet.rs  recipes.rs  regressions.rs  replay.rs  replays.rs  review.rs  runs.rs  runtimes.rs  sessions.rs  setup_path.rs  (+7 more)
apps/cli/src/daemon/: mdns.rs  mod.rs  protocol.rs
apps/cli/src/grounding/: badges.rs  claude_stream_parser.rs  mod.rs  policy.rs  verdict.rs
apps/cli/src/methodology/: archetypes.rs  compose.rs  cost.rs  diagnose.rs  mod.rs  rubric.rs  runner.rs  types.rs
apps/desktop/: ROADMAP.md  index.html  node_modules  package.json  tailwind.config.js  tsconfig.json  tsconfig.node.json  vite.config.ts  vitest.config.ts
apps/desktop/scripts/: build-sidecar.sh
apps/desktop/src/: App.tsx  index.css  main.tsx
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/src/: active_runs.rs  anon_telemetry.rs  api_dispatch.rs  api_dispatch_tools.rs  byok.rs  commands.rs  e2e_keychain.rs  encryption.rs  events.rs  file_attribution.rs  health_poller.rs  identity.rs  identity_probe.rs  installer_detect.rs  lib.rs  local_insights.rs  log_watcher.rs  main.rs  mesh_view.rs  observe.rs  openclaw_ws.rs  passive_observer.rs  posts.rs  pty.rs  ratchet_view.rs  recipes.rs  recipes_engine.rs  rekey.rs  remote_runtimes_view.rs  runtime_health.rs  runtime_quota_view.rs  schema.rs  sessions_view.rs  telemetry.rs  tether_host.rs  types.rs
apps/desktop/src-tauri/src/commands/: COMMANDS_SPLIT_PLAN.md  agent_hooks_evals.rs  analytics.rs  chat_threads.rs  context.rs  cron.rs  env_vars.rs  events_activity.rs  execution_logs.rs  files_paths.rs  fs_actions.rs  inputs.rs  knowledge.rs  live_health.rs  llm_api_keys.rs  loops.rs  mcp.rs  mcp_dispatch.rs  mcp_install.rs  methodology_views.rs  missions.rs  mod.rs  models.rs  notifications.rs  onboarding.rs  posts.rs  projects.rs  recipes.rs  runtimes.rs  secrets.rs  settings_config.rs  shared.rs  skills.rs  skills_mutate.rs  skills_validate.rs  telemetry.rs  usage_billing.rs  workflow_webhooks.rs  workflows.rs
apps/desktop/src-tauri/src/recipes_engine/: actions.rs  audit.rs  mod.rs  placeholders.rs  triggers.rs
apps/desktop/src-tauri/src/sessions_view/: mod.rs  read.rs  write.rs
apps/desktop/src/components/: AboutPanel.tsx  ActivityFeed.tsx  ApprovalDialog.tsx  AutomationFlow.tsx  ClickablePath.tsx  CommandPalette.tsx  CompareTracesPanel.tsx  ConfigBackup.tsx  ConfigEditor.tsx  ContextVisualizer.tsx  CostBenchmarksPanel.tsx  CreateSkillModal.tsx  DemoOverlay.tsx  ErrorBoundary.tsx  ExternalAgentsInsights.tsx  FileViewer.tsx  HooksManager.tsx  InitiatorBadge.tsx  LiveRuns.tsx  LoginModal.tsx  LoopComposer.tsx  (+23 more)
apps/web/: index.html  node_modules  package.json  tailwind.config.js  tsconfig.json  vercel.json  vite.config.ts
apps/web/src/: ApiKeysPanel.tsx  CostDashboard.tsx  Onboarding.tsx  UserSettingsPage.tsx  WebDashboard.tsx  main.tsx  web.css
docs/: CONTINUATION_PLAN.md  CROSS_REPO_DATA_CONTRACT.md  FIRST-CHAT-WIZARD-PLAN.md  PERMISSIONS.md  RELEASE_TESTING_PROCEDURE.md  SCHEMA.md  SDK.md  SESSIONS.md  V1.3.0-IMPLEMENTATION.md  V1.4.0-IMPLEMENTATION.md  V1.6.0-AUTOMATIONS-REPURPOSE.md  V1.6.0-IMPLEMENTATION.md  V2.0.0-EXTERNAL-AGENTS.md  agent-playbook.md  comparison.md  dogfood-v2.7.9.md  eval-methodology.md  grounding.md  mcp-author-guide.md  methodology-runner.md  multi-session-plan-2026-05-20.md  tiers.md  v2.11-learning-loop.md  v2.15-qa-checklist.md  v2.16-2.18-qa-checklist.md  v2.16-missions.md  v2.16-pr-1.5-tools.md  v2.18-active-workstation.md
docs/audits/: agent-permissions-plumb-through-2026-05-20.md
docs/gtm/: COMPETITIVE-RESEARCH-2026-05-22.md  GTM-STRATEGY-2026-05-22.md  SALES-PITCH-2026-05-22.md  SLIDE-DECK-2026-05-22.md
docs/reviews/: execution-logs-war-room-2026-05-19.md  path-b-stage-2-war-room-2026-05-19.md  v2.5.1-health-panel-2026-05-14.md  v2.6-pr-a-watcher-2026-05-14.md  v2.7.6-gate-and-pr17-2026-05-18.md
docs/security/: AUDIT-2026-05-14.md
scripts/: audit-stale-ato-binaries.sh  grant-dev-keychain-access.sh  install-hooks.sh  llm-review.sh  pre-tag-smoke.sh  symlink-worktree-deps.sh
services/marketplace/: README.md  package.json
services/marketplace/src/: index.js
services/mcp-server/: package.json
services/mcp-server/scripts/: qa-stdio-smoke.mjs
services/mcp-server/src/: ato-cli.ts  cache.ts  index.ts  runtime-paths.ts  skill-index.ts
(+371 files in other folders)
