[package]
name = "ato"
version = "2.16.0-alpha.1"
edition = "2021"
description = "ATO CLI — local-first developer-workflow operations platform for multi-runtime AI agents"
license = "MIT"
repository = "https://github.com/WillNigri/Agentic-Tool-Optimization"

[[bin]]
name = "ato"
path = "src/main.rs"

[dependencies]
# Minimal deps — no Tauri, no React, no GUI. The CLI is a thin shell
# around the same SQLite database the desktop reads/writes. Anything
# beyond that (events, dispatch, etc.) shells out to ato-desktop via
# IPC when the GUI is running, or talks to the DB directly when not.
clap = { version = "4.5", features = ["derive"] }
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
uuid = { version = "1", features = ["v4"] }
which = "6"
# v2.10 PR-4 — regex rubric for methodology scoring
regex = "1"
# Color-aware output for --human mode
colored = "2.1"
ato-recipes = { path = "../../packages/ato-recipes" }
ato-posts = { path = "../../packages/ato-posts" }
ato-api-providers = { path = "../../packages/ato-api-providers" }
ato-llm-key-resolver = { path = "../../packages/ato-llm-key-resolver" }
ato-list-models = { path = "../../packages/ato-list-models" }
ato-retry-policy = { path = "../../packages/ato-retry-policy" }
ato-pricing = { path = "../../packages/ato-pricing" }
ato-db-views = { path = "../../packages/ato-db-views" }
ato-agent-permissions = { path = "../../packages/ato-agent-permissions" }
ato-review-tools = { path = "../../packages/ato-review-tools" }
# v2.13 — shared passive observer crate powering `ato observe`. Same
# parsers the desktop auto-starts on boot, exposed as a foreground
# CLI command so headless dev boxes + CI runners get parity (Hard
# Rule #6).
ato-passive-observer = { path = "../../packages/ato-passive-observer" }
# v2.13 — `notify` already pulled in transitively, but we depend on
# `dirs` directly for ~/.ato/observe.pid resolution in the CLI.
dirs = "5"
# v2.3.21 Phase 6.x — API-key dispatch for non-CLI providers
# (MiniMax, Grok, Qwen, DeepSeek, OpenRouter). Blocking client keeps
# dispatch.rs synchronous like the existing shell-out path.
reqwest = { version = "0.12", default-features = false, features = ["json", "blocking", "rustls-tls"] }
base64 = "0.22"
# v2.4.8 security — AES-256-GCM for llm_api_keys.encrypted_key.
# Mirror of the desktop encryption module so the CLI can decrypt
# rows the GUI wrote (and re-encrypt legacy plain-base64 rows on
# first access). Master key lives in the OS keychain; both binaries
# look at the same service+account name.
aes-gcm = "0.10"
keyring = "2"
# v2.4.4 Phase 7.0 — daemon for LAN mesh.
# tokio = async runtime for the WS server + peer connections.
# ed25519-dalek = peer identity / signed messages.
# rand_core / rand = keygen entropy. Pinned via dalek's feature flags.
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "io-util", "signal", "time", "fs"] }
ed25519-dalek = { version = "2", features = ["rand_core"] }
rand = "0.9"
sha2 = "0.10"
# v2.4.4 Phase 7.0 step 2 — mDNS discovery on _ato._tcp.local.
mdns-sd = "0.11"
hostname = "0.4"

# v2.13 coordinator re-review HIGH-1 fix: target-cfg tables MUST sit
# BELOW the [dependencies] table they don't belong to. An inline
# `[target.'cfg(unix)'.dependencies]` header in the middle of
# `[dependencies]` silently captures every subsequent key into the
# target table — breaking Windows compilation when 10+ unconditional
# crates (reqwest/tokio/keyring/etc.) get scoped to cfg(unix). Keep
# all platform-specific deps at the bottom of this file going forward.
[target.'cfg(unix)'.dependencies]
# v2.13 coordinator review LOW-4 — sigaction() over the deprecated
# signal() syscall for the `ato observe` SIGTERM/SIGINT handlers.
# Already transitively pulled in by notify; promoting to a direct
# dep so the API is stable. Unix-only by feature.
nix = { version = "0.27", default-features = false, features = ["signal"] }
