[package]
name = "ato-desktop"
version = "1.1.0"
edition = "2021"

[lib]
name = "ato_desktop_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
notify = "6"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.21", features = ["native-tls"] }
futures-util = "0.3"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
serde_yaml = "0.9"
keyring = "2"
dirs = "5"
toml = "0.8"
reqwest = { version = "0.11", features = ["json"] }
lettre = { version = "0.11", features = ["tokio1-native-tls", "builder"] }
base64 = "0.22"
sha2 = "0.10"

[dev-dependencies]
tempfile = "3"
