[package]
name = "ato-desktop"
version = "2.15.4"
edition = "2021"

[lib]
name = "ato_desktop_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# `devtools` feature surfaces the WebKit inspector in release builds —
# right-click → Inspect Element. Without this, even
# `windows[].devtools = true` in tauri.conf.json is a no-op in release
# bundles (Tauri v2 requires the Cargo feature to compile in the
# inspector). v1.5.12 had the conf flag but not the feature, so the
# right-click menu only showed "Reload" — diagnostic dead end. v1.5.14
# enables it properly so we can finally see what's failing on signup.
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-shell = "2"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
notify = "6"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.21", features = ["native-tls"] }
futures-util = "0.3"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
serde_yaml = "0.9"
keyring = "2"
dirs = "5"
toml = "0.8"
reqwest = { version = "0.11", features = ["json"] }
lettre = { version = "0.11", features = ["tokio1-native-tls", "builder"] }
base64 = "0.22"
sha2 = "0.10"
rand = "0.8"
which = "6"
# v2.4.8 security — AES-256-GCM for llm_api_keys.encrypted_key.
# Pre-2.4.8 the column was plain base64 (no cipher); a master key
# stored in the OS keychain now wraps the stored values.
aes-gcm = "0.10"
portable-pty = "0.8"
ato-recipes = { path = "../../../packages/ato-recipes" }
ato-posts = { path = "../../../packages/ato-posts" }
ato-api-providers = { path = "../../../packages/ato-api-providers" }
ato-llm-key-resolver = { path = "../../../packages/ato-llm-key-resolver" }
ato-list-models = { path = "../../../packages/ato-list-models" }
ato-retry-policy = { path = "../../../packages/ato-retry-policy" }
ato-pricing = { path = "../../../packages/ato-pricing" }
ato-db-views = { path = "../../../packages/ato-db-views" }
ato-agent-permissions = { path = "../../../packages/ato-agent-permissions" }
ato-review-tools = { path = "../../../packages/ato-review-tools" }
# v2.13 — shared passive observer crate. The desktop's passive_observer
# module is now a thin Tauri-state wrapper around this crate; the same
# parsers + watcher power `ato observe` from the CLI for headless dev
# boxes and CI runners. See [[ato-live-billing-path]].
ato-passive-observer = { path = "../../../packages/ato-passive-observer" }

# v2.13 re-review-2 (claude) MEDIUM-2 — nix on unix for an
# EPERM-aware PID liveness probe. kill(pid, 0) returning -1 with
# EPERM means the process exists but we can't signal it (different
# UID / hardened runtime); only ESRCH means actually dead.
[target.'cfg(unix)'.dependencies]
nix = { version = "0.27", default-features = false, features = ["signal"] }

[dev-dependencies]
tempfile = "3"
